Correction z-index header page d'accueil

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,5 +1,4 @@
 .header {
-  z-index: -1;
   display: flex;
   flex-direction: column;
   position: relative;
